# trpl

./: Cargo.toml  README.md
_001_guessing_game/: Cargo.toml
_001_guessing_game/src/: main.rs
_002_variables/: Cargo.toml
_002_variables/src/: main.rs
_005_structs/: Cargo.toml
_005_structs/src/: main.rs
_006_enums/: Cargo.toml
_006_enums/src/: main.rs
_007_crates/: Cargo.toml
_007_crates/src/: lib.rs
_008_collections/: Cargo.toml
_008_collections/src/: main.rs
_009_error_handling/: Cargo.toml
_009_error_handling/src/: main.rs
_010_generics_traits_lifetimes/: Cargo.toml
_010_generics_traits_lifetimes/src/: lib.rs  main.rs
_011_automated_tests/: Cargo.toml
_011_automated_tests/src/: lib.rs
_012_minigrep/: Cargo.toml
_013_iterators_closures/: Cargo.toml
_014_cargo/: Cargo.toml
_014_cargo_add_one/: Cargo.toml
_015_smart_pointers/: Cargo.toml
_016_concurrency/: Cargo.toml
_017_oop/: Cargo.toml
_018_patterns_and_matching/: Cargo.toml
_01_guessing_game/: Cargo.toml
_02_variables/: Cargo.toml
_05_structs/: Cargo.toml
_06_enums/: Cargo.toml
_07_crates/: Cargo.toml
_08_collections/: Cargo.toml
_09_error_handling/: Cargo.toml
_10_generics_traits_lifetimes/: Cargo.toml
_11_automated_tests/: Cargo.toml
_12_minigrep/: Cargo.toml
_13_iterators_closures/: Cargo.toml
_14_cargo/: Cargo.toml
_14_cargo_add_one/: Cargo.toml
_15_smart_pointers/: Cargo.toml
_16_concurrency/: Cargo.toml
_17_oop/: Cargo.toml
_18_patterns_and_matching/: Cargo.toml
_19_advanced_features/: Cargo.toml
sorted_vec/: Cargo.toml
(+39 files in other folders)
