[workspace]
resolver = "3"
members = [
    "_001_guessing_game", 
    "_002_variables", 
    "_005_structs", 
    "_006_enums", 
    "_007_crates", 
    "_008_collections", 
    "_009_error_handling", 
    "_010_generics_traits_lifetimes", 
    "_011_automated_tests", 
    "_012_minigrep", 
    "_013_iterators_closures", 
    "_014_cargo", 
    "fibonacci", 
    "sorted_vec",

]


