[workspace]
resolver = "3"
members = [
    "_01_guessing_game", 
    "_02_variables", 
    "_05_structs", 
    "_06_enums", 
    "_07_crates", 
    "_08_collections", 
    "_09_error_handling", 
    "_10_generics_traits_lifetimes", 
    "_11_automated_tests", 
    "_12_minigrep", 
    "_13_iterators_closures", 
    "_14_cargo", "_14_cargo_add_one", "_15_smart_pointers", "_16_concurrency", "_17_oop", "_18_patterns_and_matching", "_19_advanced_features", "_19_advanced_features/hello_macro_derive", 
    "fibonacci", 
    "sorted_vec",

]


